# solva

./: .editorconfig  .gitignore  .vercelignore  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  SKILL.md  buf.gen.yaml  buf.yaml  go.work  go.work.sum  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  task.yml
.github/workflows/: ci.yml
apps/docs/: .gitignore  eslint.config.mjs  mdx-components.tsx  next.config.mjs  package.json  source.config.ts  tsconfig.json  vercel.json
apps/docs/content/blog/: meta.json  reserves-is-not-solvency.mdx  the-audit-problem.mdx
apps/docs/content/docs/: architecture.mdx  contract-address.mdx  end-to-end-flow.mdx  index.mdx  meta.json  quickstart.mdx  sandbox.mdx  sdk-reference.mdx
apps/docs/public/: manifest.json
apps/docs/src/app/: global.css  layout.tsx  not-found.tsx  robots.ts  sitemap.ts
apps/docs/src/app/(docs)/: layout.tsx
apps/docs/src/app/(home)/: page.tsx
apps/docs/src/app/(marketing)/: layout.tsx  page.tsx
apps/docs/src/lib/: layout.config.tsx  layout.shared.tsx  shared.ts  source.ts
apps/web/: .env.example  eslint.config.js  next.config.mjs  package.json  tailwind.config.js  vercel.json
apps/web/src/app/: dashboard-client.tsx  globals.css  layout.tsx  page.tsx
apps/web/src/components/: copy-button.tsx  external-link.tsx  footer.tsx  logo.tsx  public-nav.tsx  site-nav.tsx  spinner.tsx  theme-provider.tsx  theme-toggle.tsx
apps/web/src/lib/: auth.ts  format.ts  links.ts  noir.ts  proof-registry.ts  report.ts  site.ts  solva.ts  theme-script.ts
apps/website/: .env.example  eslint.config.js  next.config.mjs  package.json  tailwind.config.js  tsconfig.json  vercel.json
apps/website/content/blog/: merkle-sum-tree-in-noir.mdx  proof-of-reserves-is-the-easy-half.mdx  telling-a-regulator-one-number.mdx  why-solva-settles-on-stellar.mdx
apps/website/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
apps/website/src/components/: theme-toggle.tsx
apps/website/src/lib/: cn.ts  fonts.ts  is-external.ts  routes.ts  sandbox-backend.ts  site.ts  slug.ts  theme-script.ts
circuits/: README.md
circuits/lib/: Nargo.toml  POSEIDON2_PARAMS.md
circuits/lib/src/: lib.nr  parity_tests.nr
circuits/merkle/: Nargo.toml
circuits/merkle/src/: lib.nr
circuits/solvency/: Nargo.toml  Prover.toml.example
circuits/solvency/src/: main.nr
contracts/proof-registry/: .contract_id  Cargo.toml  README.md
contracts/proof-registry/src/: lib.rs  storage.rs  test.rs  test_parity.rs
contracts/proof-registry/test_snapshots/test/: publish_requires_owner_auth.1.json  publish_then_read_round_trip.1.json
crates/ultrahonk-soroban-verifier/: Cargo.toml  VENDORED.md
crates/ultrahonk-soroban-verifier/src/: debug.rs  field.rs  relations.rs  sumcheck.rs  transcript.rs  utils.rs
infra/: HOSTING.md  cloudbuild.yaml  docker-compose.yml
patches/: Cargo.toml
patches/primeorder/: .cargo_vcs_info.json
patches/primeorder/src/: affine.rs  projective.rs
proto/: prover.proto
scripts/: demo-up.sh  e2e.sh
services/oracle/: eslint.config.js  package.json  tsconfig.json  tsup.config.ts
services/oracle/src/: anomaly.test.ts  anomaly.ts  index.ts  server.ts  solvency.test.ts  solvency.ts  tools.test.ts  tools.ts
services/orchestrator/: Dockerfile  README.md  go.mod  go.sum  sqlc.yaml
services/orchestrator/api/: openapi.yaml
services/orchestrator/cmd/app/: deps.go  main.go
services/orchestrator/internal/config/: config.go
services/orchestrator/internal/entity/: inclusion.go  proof.go  reserve.go  tenant.go
services/orchestrator/internal/repo/: audit_log.sql.go  convert.go  customers.sql.go  cycle_runs.sql.go  inclusion.go  inclusion_test.go  liabilities.sql.go  models.go  postgres.go  postgres_test.go  proofs.sql.go  querier.go  redis.go  tenant_test.go  tenants.sql.go
services/orchestrator/internal/usecase/: cycle.go  cycle_test.go  ports.go  proof.go  query.go
services/orchestrator/migrations/: 0001_init.down.sql  0001_init.sql  0002_cycle_runs.down.sql  0002_cycle_runs.sql  0003_tenant_contract.down.sql  0003_tenant_contract.sql
services/orchestrator/query/: audit_log.sql  customers.sql  cycle_runs.sql  liabilities.sql  proofs.sql  tenants.sql
services/prover/: Cargo.toml  Dockerfile  README.md  build.rs
services/prover/src/: main.rs  proving.rs  service.rs  tree.rs  tree_parity_tests.rs
services/sandbox/: Dockerfile  README.md  go.mod  go.sum
services/sandbox/cmd/app/: main.go
services/sandbox/internal/bank/: payload.go  registry.go  registry_test.go
services/sandbox/internal/config/: config.go
services/sandbox/internal/oauth/: oauth.go  oauth_test.go
services/sandbox/internal/server/: server.go  server_test.go
services/sandbox/internal/signer/: signer.go
test-vectors/: poseidon2_parity.json
(+165 files in other folders)
