[workspace]
resolver = "2"
members = [
    "contracts/proof-registry",
    "services/prover",
]

# Soroban contracts compile to small wasm. Optimize for size.
[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
