[package]
name = "proof-registry"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk      = "25.3"
soroban-poseidon = "25"

[dev-dependencies]
soroban-sdk      = { version = "25.3", features = ["testutils"] }
soroban-poseidon = { version = "25",   features = ["testutils"] }
