[package]
name = "proof-registry"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk      = { version = "26", features = ["alloc"] }
soroban-poseidon = "26"
ultrahonk_soroban_verifier = { path = "../../crates/ultrahonk-soroban-verifier", default-features = false }

[dev-dependencies]
soroban-sdk      = { version = "26", features = ["testutils", "alloc"] }
soroban-poseidon = { version = "26", features = ["testutils"] }
