[package]
name = "solva-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Zeroizes the witness copy after proving so secret balances do not linger in memory.
zeroize = { version = "1", features = ["derive"] }
# services/prover/Cargo.toml  [dev-dependencies]
num-bigint = "0.4"
ark-bn254 = "0.4.0"
ark-ff = "0.4.0"
light-poseidon = "0.2.0"
hex = "0.4.3"
[build-dependencies]
tonic-build = "0.12"
