[package]
name = "solva-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zeroize = { version = "1", features = ["derive"] }
ark-bn254 = "0.5"
ark-ff    = "0.5"
hex = "0.4.3"

[build-dependencies]
tonic-build = "0.12"
